# small-rtic-app

./: .gitignore  Cargo.toml  README.md  big-functions.rs  build.rs  run.sh
.cargo/: config
src/: main.rs
