[package]
name = "small-rtic-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1"
cortex-m-semihosting = "0.3.3"
atsamd-hal = { git = "ssh://git@github.com/bradleyharden/atsamd.git", branch = "clocking-api-v2", features = ["same51n-rt", "unproven"] }
panic-halt = "0.2"
